Left sidebar logic fix, right sidebar

--- a/src/app/back/admin/admin.component.html
+++ b/src/app/back/admin/admin.component.html
@@ -1,7 +1,7 @@
 <md-sidenav-container>
 	<admin-header> </admin-header>
 	<md-sidenav #rightsidenav mode="side" align="end" class="sidenav">
-		Right Sidebar
+		<admin-rightnav> </admin-rightnav>
 	</md-sidenav>
 	<button md-button id="rightSideNav" class="sidenav-button" (click)="toggleRightSidenav(leftsidenav, rightsidenav);"> </button>
 
