--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,6 +87,21 @@ admin {
 		}
 	}
 
+	admin-rightnav {
+		.mat-card.work-progress .mat-list {
+			.mat-list-item .mat-list-item-content {
+				flex-direction: column;
+				align-items: start;
+			}
+		}
+
+		.mat-card.contact-online .mat-list {
+			.mat-list-item .mat-list-item-content {
+				width: 100%;
+			}
+		}
+	}
+
 	.header-content .mat-list-item-content {
 		height: initial !important;
 	}
