--- a/src/app/front/pages/home/home.component.html
+++ b/src/app/front/pages/home/home.component.html
@@ -5,7 +5,7 @@
 	</div>
 	<div fxLayout="column" style="padding: 10px;">
 		<app-store-filter> </app-store-filter>
-		<app-store-grid> </app-store-grid>
+		<app-store-grid [ngStyle]="{'padding': '10px', 'margin-top': '10px'}"> </app-store-grid>
 	</div>
 	<app-collaborator-panel> </app-collaborator-panel>
 	<app-action-panel> </app-action-panel>
