--- a/src/app/front/partials/sidenav/left/left.component.html
+++ b/src/app/front/partials/sidenav/left/left.component.html
@@ -1,6 +1,6 @@
-<md-toolbar color="accent">
+<md-toolbar color="accent" fxLayout="row" fxLayoutAlign="center center">
 	<h1 fxLayout="row" fxLayoutAlign="center center">
-		<md-icon class="logo">assignment</md-icon>
+		<md-icon class="logo" [ngStyle]="{'margin-right': '10px'}">assignment</md-icon>
 		List categories
 	</h1>
 </md-toolbar>
