--- a/src/app/front/partials/sidenav/right/right.component.html
+++ b/src/app/front/partials/sidenav/right/right.component.html
@@ -1,4 +1,4 @@
-<form name="form" fxLayout="column" class="mat-padding">
+<form name="form" fxLayout="column" class="mat-padding" [ngStyle]="{'margin-bottom': '1em'}">
 	<md-input-container>
 		<input mdInput  placeholder="Search*" [formControl]="searchControl">
 		<md-error *ngIf="searchControl.hasError('required')">
