--- a/src/app/front/front.component.html
+++ b/src/app/front/front.component.html
@@ -8,6 +8,6 @@
 	<button md-icon-button id="leftSideNav" fxHide (click)="leftsidenav.open()"><md-icon md-font-set="material-icons">menu</md-icon></button>
 	<button md-icon-button id="rightSideNav" fxHide (click)="rightsidenav.open()"><md-icon md-font-set="material-icons">menu</md-icon></button>
 	<app-header></app-header>
-	<router-outlet name='front'></router-outlet>
+	<router-outlet name="front"> </router-outlet>
 	<app-footer></app-footer>
 </md-sidenav-container>
