Style fix and product filter side bar

--- a/src/app/front/partials/footer/footer.component.html
+++ b/src/app/front/partials/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="color-primary-accent">www.equalitymodehouse.com is the first online shopping mail and fully dedicated to fashion</div>
 <div class="color-primary-accent">ở đây thêm cái đồng hồ lấy log giờ server</div>
 
-<md-toolbar class="color-accent">
+<md-toolbar class="color-accent" fxLayout="row" fxLayoutAlign="start center">
     <h3 class="color-accent"> Copyrights <md-icon>copyright</md-icon> Economics 2017. All Right Reserved. </h3>
 </md-toolbar>
