--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,6 +66,10 @@ html, body {
 	width: 0px;
 }
 
+.mat-ink-bar {
+	display: none;
+}
+
 .mat-padding {
 	padding: 8px;
 }
@@ -121,12 +125,23 @@ app {
 		background-color: #fff;
 	}
 
-	app-category app-sidebar {
-		.mat-button-wrapper {
+	app-category {
+		app-sidebar {
+			.mat-button-wrapper {
+				width: 100%;
+			    justify-content: space-between;
+			    display: flex;
+			    align-items: center;
+			}
+		}
+
+		app-product-grid {
 			width: 100%;
-		    justify-content: space-between;
-		    display: flex;
-		    align-items: center;
+			padding: 0px 20px;
+
+			.mat-tab-body-wrapper {
+				width: 100%;
+			}
 		}
 	}
 }
