--- a/src/app/front/pages/private-sale/private-sale.component.html
+++ b/src/app/front/pages/private-sale/private-sale.component.html
@@ -1,3 +1,17 @@
-<p>
-  private-sale works!
-</p>
+<h2 [ngStyle]="{'text-align': 'center', 'margin-top': '40px'}"> 
+	<u> WATCHES SHOP </u> 
+</h2>
+<div [ngStyle]="{'padding': '50px'}">
+	<md-grid-list (window:resize)="onResize()" cols="{{ cols }}" gutterSize="50">
+		<md-grid-tile *ngFor="let shop of shopList">
+			<md-card class="full-size">
+				<md-card-content>
+					<img src="{{ shop.image }}">
+				</md-card-content>
+				<md-card-footer>
+					{{ shop.name }}
+				</md-card-footer>
+			</md-card>
+		</md-grid-tile>
+	</md-grid-list>
+</div>
