--- a/src/app/front/pages/category/category.component.html
+++ b/src/app/front/pages/category/category.component.html
@@ -1,5 +1,5 @@
 <app-product-filter> </app-product-filter>
 <div fxLayout="row">
-	<app-sidebar> </app-sidebar>
+	<app-product-filter-sidebar> </app-product-filter-sidebar>
 	<app-product-grid> </app-product-grid>
 </div>
