--- a/src/styles.scss
+++ b/src/styles.scss
@@ -132,7 +132,7 @@ app {
 	}
 
 	app-category {
-		app-sidebar {
+		app-product-filter-sidebar {
 			.mat-button-wrapper {
 				width: 100%;
 			    justify-content: space-between;
