--- a/src/app/front/partials/store-grid/store-grid.component.html
+++ b/src/app/front/partials/store-grid/store-grid.component.html
@@ -2,9 +2,11 @@
 	<md-tab (window:resize)="onResize()" *ngFor="let i of [1, 2, 3, 4, 5]" label="{{ i }}">
 		<md-grid-list rowHeight="1:1" gutterSize="16" cols="{{cols}}">
 			<md-grid-tile *ngFor="let vendor of vendors">
-				<md-grid-tile-header>{{vendor}}</md-grid-tile-header>
-				<img src="assets/img/product.jpg">
-				<md-grid-tile-footer [ngStyle]="{'background-color': '#000'}"></md-grid-tile-footer>
+				<a [routerLink]="['/store']" class="full-width">
+					<md-grid-tile-header>{{vendor}}</md-grid-tile-header>
+					<img src="assets/img/product.jpg">
+					<md-grid-tile-footer [ngStyle]="{'background-color': '#000'}"></md-grid-tile-footer>
+				</a>
 			</md-grid-tile>
 		</md-grid-list>
 	</md-tab>
