Store extra complete

--- a/src/app/front/pages/product/product.component.html
+++ b/src/app/front/pages/product/product.component.html
@@ -57,4 +57,7 @@
 		</div>
 	</div>
 </div>
-<app-product-extra> </app-product-extra>
+<div fxLayout="row" [ngStyle]="{'margin-top': '20px'}">
+	<app-product-extra fxFlex="70"> </app-product-extra>
+	<app-store-summary fxFlex="30"> </app-store-summary>
+</div>
