--- a/src/app/front/partials/product-extra/product-extra.component.html
+++ b/src/app/front/partials/product-extra/product-extra.component.html
@@ -3,9 +3,17 @@
 		Lorem ipsum dolor sit amet, consectetuer adipscing elit, sed diam nonummy nibhumils euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex etlisun commodo consequat. Duis autem vel eumm iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et lusto odio dignissim qui bladdit praesent luptatum zzril delenit augue.
 	</md-tab>
 	<md-tab label="Review(12)">
-
-	</md-tab>
-	<md-tab label="Product Tag">
-
+		<div class="review-block" *ngFor="let i of [1, 2, 3, 4, 5]">
+			<div fxLayout="row" fxLayoutAlign="start center">
+				<span [ngStyle]="{'color': '#009688'}">
+					<md-icon *ngFor="let j of [1, 2, 3, 4, 5]">star_border</md-icon>
+				</span>
+				<label class="customer-name" [ngStyle]="{ 'margin-left': '20px' }"> John Doe </label>
+			</div>
+			<p class="review-date"> Dec 12 2016 </p>
+			<p class="review-text">
+				Lorem ipsum dolor sit amet, consectetuer adipscing elit, sed diam nonummy nibhumils euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex etlisun commodo consequat. Duis autem vel eumm iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et lusto odio dignissim qui bladdit praesent luptatum zzril delenit augue.
+			</p>
+		</div>
 	</md-tab>
 </md-tab-group>
