Product summary complete

--- a/src/app/front/pages/product/product.component.html
+++ b/src/app/front/pages/product/product.component.html
@@ -58,6 +58,6 @@
 	</div>
 </div>
 <div fxLayout="row" [ngStyle]="{'margin-top': '20px'}">
-	<app-product-extra fxFlex="70"> </app-product-extra>
-	<app-store-summary fxFlex="30"> </app-store-summary>
+	<app-product-extra> </app-product-extra>
+	<app-store-summary> </app-store-summary>
 </div>
