--- a/src/app/front/partials/store-summary/store-summary.component.html
+++ b/src/app/front/partials/store-summary/store-summary.component.html
@@ -1,5 +1,5 @@
-<div class="store-summary" fxLayout="column" fxLayoutAlign="start center">
-	<img src="assets/img/store-summary.png">
+<div class="store-summary-wrapper" fxLayout="column" fxLayoutAlign="start center">
+	<img class="owner-photo" src="assets/img/store-summary.png">
 	<label class="store-name"> Bag's shop </label>
 	<span [ngStyle]="{'color': '#009688'}">
 		<md-icon *ngFor="let j of [1, 2, 3, 4, 5]">star_border</md-icon>
