Related products complete

--- a/src/app/front/pages/product/product.component.html
+++ b/src/app/front/pages/product/product.component.html
@@ -61,3 +61,7 @@
 	<app-product-extra> </app-product-extra>
 	<app-store-summary> </app-store-summary>
 </div>
+
+<div class="related-products">
+	<app-product-card fxFlex="25" *ngFor="let i of [1, 2, 3, 4]"> </app-product-card>
+</div>
