--- a/src/app/front/pages/product/product.component.scss
+++ b/src/app/front/pages/product/product.component.scss
@@ -1,3 +1,7 @@
+app-product-card {
+	margin: 30px;
+}
+
 .btn-add-to-cart {
 	background: #009688;
 	color: #fff;
@@ -47,4 +51,8 @@
 
 .product-information {
 	padding: 20px;
+}
+
+.related-products {
+	padding: 10px;
 }
