--- a/src/app/front/pages/signup/signup.component.scss
+++ b/src/app/front/pages/signup/signup.component.scss
@@ -16,6 +16,14 @@ form.ng-invalid .btn-login {
 	margin-top: 20px;
 }
 
+.mat-icon {
+	margin-right: 15px;
+}
+
+.mat-input-container {
+	width: 100%;
+}
+
 .mat-raised-button {
 	color: #fff;
 	margin: 6px 0px;
