--- a/src/app/back/admin/admin.component.html
+++ b/src/app/back/admin/admin.component.html
@@ -10,8 +10,21 @@
 			<admin-leftnav> </admin-leftnav>
 		</md-sidenav>
 		<button md-button id="leftSideNav" class="hidden" (click)="toggleLeftSidenav(leftsidenav, rightsidenav)"> </button>
-		<div class="admin-content" [ngStyle]="{'padding': '15px'}">
-			<router-outlet name="admin"></router-outlet>
+		<div class="admin-content" [ngStyle]="{'padding': '25px'}">
+			<h1> 
+				{{ title }} 
+
+				<small [ngStyle]="{'font-size': '40%', 'margin-left': '30px'}">
+					<span>
+						<a [routerLink]="['/admin/dashboard']"> Home </a>
+					</span>
+					<span> / </span>
+					<span>
+						<a [routerLink]="[router.url]"> {{ title }} </a>
+					</span>
+				</small>
+			</h1>
+			<router-outlet></router-outlet>
 		</div>
 	</md-sidenav-container>
 </md-sidenav-container>
