--- a/src/app/front/partials/header/header.component.html
+++ b/src/app/front/partials/header/header.component.html
@@ -1,4 +1,4 @@
-<md-toolbar color="accent">
+<md-toolbar color="accent" [ngStyle]="{'background': '#000'}">
     <button md-icon-button fxHide.gt-sm (click)="openLeftSidenav()"><md-icon md-font-set="material-icons">menu</md-icon></button>
 	<img style="max-width: 40%;" src="assets/img/logo.jpg" alt="">
 	<div fxLayout="column" fxHide.sm fxHide.xs fxLayoutAlign="right">
