--- a/src/styles.scss
+++ b/src/styles.scss
@@ -112,6 +112,13 @@ admin {
 		}
 	}
 
+	admin-vendors-form {
+		angular-tinymce > .mce-container {
+			width: initial !important;
+			margin-left: 30px;
+		}
+	}
+
 	.header-content .mat-list-item-content {
 		height: initial !important;
 	}
