--- a/src/app/back/admin/pages/categories/categories-form.component.html
+++ b/src/app/back/admin/pages/categories/categories-form.component.html
@@ -7,12 +7,12 @@
 
 <md-tab-group>
 	<md-tab label="General">
-		<div class="tab-general" [ngStyle]="{'margin-top': '30px'}">
+		<div class="tab-general" [ngStyle]="{'padding': '30px'}">
 			<md-form-field>
 				<input mdInput placeholder="Category Name">
 			</md-form-field>
 
-			<span [ngStyle]="{'margin-left': '30px', 'color': 'rgba(0, 0, 0, 0.54)'}"> Description </span>
+			<span [ngStyle]="{'color': 'rgba(0, 0, 0, 0.54)'}"> Description </span>
 			<angular-tinymce> </angular-tinymce>
 
 			<md-form-field>
@@ -30,7 +30,7 @@
 	</md-tab>
 
 	<md-tab label="Data">
-		<div class="tab-data" [ngStyle]="{'margin-top': '30px'}">
+		<div class="tab-data" [ngStyle]="{'padding': '30px'}">
 			<md-form-field>
 				<input mdInput placeholder="Parent">
 			</md-form-field>
@@ -51,7 +51,7 @@
 				<input mdInput placeholder="SEO URL">
 			</md-form-field>
 
-			<div class="image" [ngStyle]="{'margin-left': '30px', 'margin-bottom': '20px'}">
+			<div class="image" [ngStyle]="{'margin-bottom': '20px'}">
 				<div [ngStyle]="{'color': 'rgba(0, 0, 0, 0.54)'}"> Image </div>
 				<img width="100" height="100" class="category-image" src="http://www.sharejesusgeneva.com/image/cache/no_image-100x100.png" (click)="togglePopover()">
 				<div class="popover hidden" role="tooltip">
