--- a/src/styles.scss
+++ b/src/styles.scss
@@ -112,10 +112,9 @@ admin {
 		}
 	}
 
-	admin-vendors-form, admin-categories-form {
+	admin-vendors-form, admin-categories-form, admin-products-form {
 		angular-tinymce > .mce-container {
 			width: initial !important;
-			margin-left: 30px;
 		}
 	}
 
