--- a/src/styles.scss
+++ b/src/styles.scss
@@ -125,6 +125,17 @@ admin {
 	.mat-sidenav.mat-sidenav-opened {
 		box-shadow: 0 8px 10px -5px rgba(0,0,0,.2), 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12);
 	}
+
+	.title {
+	    border-top: 2px solid #777;
+	    border-bottom: 1px solid #ddd;
+	    padding: 5px 10px;
+	    margin-top: 30px;
+
+	    h3 {
+	        margin-top: 10px;
+	    }
+	}
 }
 
 app {
