Attribute component, blogger component

--- a/src/app/back/admin/pages/news/news-list.component.scss
+++ b/src/app/back/admin/pages/news/news-list.component.scss
@@ -22,3 +22,12 @@
 .mat-table {
 	border: 1px solid #ddd;
 }
+
+.quantity {
+    background: #8fbb6c;
+    padding: 5px;
+    border-radius: 4px;
+    color: #fff;
+    font-size: 12px;
+    font-weight: 600;
+}
