--- a/src/app/back/admin/pages/news/news-form.component.html
+++ b/src/app/back/admin/pages/news/news-form.component.html
@@ -1,7 +1,7 @@
 <div class="title">
 	<h3 fxLayout="row" fxLayoutAlign="start center">
 		<md-icon [ngStyle]="{'margin-right': '10px'}">create</md-icon> 
-		<span> New seller </span>
+		<span> Add News </span>
 	</h3>
 </div>
 
