--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,6 +81,22 @@ a {
 }
 
 admin {
+
+	.action-button {
+		border-radius: 5px;
+		padding: 0px 5px;
+	    min-width: initial;
+	    margin: 2px;
+	    color: #fff;
+	    font-size: 1px;
+
+	    .mat-icon {
+			font-size: 15px;
+			line-height: 15px;
+			height: 15px;
+	    }
+	}
+
 	admin-leftnav .mat-list {
 		padding-top: 0px;
 
