--- a/src/app/back/admin/pages/recurring-orders/recurring-orders-form.component.html
+++ b/src/app/back/admin/pages/recurring-orders/recurring-orders-form.component.html
@@ -25,8 +25,7 @@
 	</md-select>
 
 	<md-select placeholder="Status">
-		<md-option value="Enabled"> Enabled </md-option>
-		<md-option value="Disabled"> Disabled </md-option>
+		<md-option *ngFor="let status of ['Active', 'Inactive', 'Cancelled', 'Suspended', 'Expred', 'Pending']" value="{{status}}"> {{ status }} </md-option>
 	</md-select>
 
 	<md-form-field [ngStyle]="{'width': '300px'}">
