--- a/src/app/back/admin/pages/returns/returns-list.component.html
+++ b/src/app/back/admin/pages/returns/returns-list.component.html
@@ -1,28 +1,36 @@
 <div class="title">
 	<h3 fxLayout="row" fxLayoutAlign="start center">
 		<md-icon [ngStyle]="{'margin-right': '10px'}">list</md-icon> 
-		<span> Recurring Orders List </span>
+		<span> Product Return List </span>
 	</h3>
 </div>
 
 <div class="filter-panel" [ngStyle]="{'margin-top': '20px'}">
 	<div fxLayout="row" fxLayoutAlign="start center">
 
-		<div fxFlex="33" [ngStyle]="{'padding': '0px 10px'}">
+		<div fxFlex="25" [ngStyle]="{'padding': '0px 10px'}">
 			<md-form-field class="full-width">
-				<input mdInput #recurringIDFilter placeholder="Recurring ID">
+				<input mdInput #returnIDFilter placeholder="Return ID">
 			</md-form-field>
 		</div>
 
-		<div fxFlex="33" [ngStyle]="{'padding': '0px 10px'}">
+		<div fxFlex="25" [ngStyle]="{'padding': '0px 10px'}">
 			<md-form-field class="full-width">
-				<input mdInput #orderIDFilter placeholder="Order ID">
+				<input mdInput #customerFilter placeholder="Customer">
 			</md-form-field>
 		</div>
 
-		<div fxFlex="33" [ngStyle]="{'padding': '0px 10px'}">
+		<div fxFlex="25" [ngStyle]="{'padding': '0px 10px'}">
 			<md-form-field class="full-width">
-				<input mdInput #paymentReferenceFilter placeholder="Payment Reference">
+				<input mdInput #modelFilter placeholder="Model">
+			</md-form-field>
+		</div>
+
+		<div fxFlex="25" [ngStyle]="{'padding': '0px 10px'}">
+			<md-form-field class="full-width">
+				<input mdInput [mdDatepicker]="dateAddedPicker" #dateAddedFilter placeholder="Date Added">
+				<md-datepicker-toggle mdSuffix [for]="dateAddedPicker"></md-datepicker-toggle>
+				<md-datepicker #dateAddedPicker></md-datepicker>
 			</md-form-field>
 		</div>
 
@@ -30,23 +38,29 @@
 
 	<div fxLayout="row" fxLayoutAlign="start center">
 
-		<div fxFlex="33" [ngStyle]="{'padding': '0px 10px'}">
+		<div fxFlex="25" [ngStyle]="{'padding': '0px 10px'}">
 			<md-form-field class="full-width">
-				<input mdInput #customerFilter placeholder="Customer">
+				<input mdInput #orderIDFilter placeholder="Order ID">
 			</md-form-field>
 		</div>
 
-		<div fxFlex="33" [ngStyle]="{'padding': '0px 10px'}">
+		<div fxFlex="25" [ngStyle]="{'padding': '0px 10px'}">
+			<md-form-field class="full-width">
+				<input mdInput #productFilter placeholder="Product">
+			</md-form-field>
+		</div>
+
+		<div fxFlex="25" [ngStyle]="{'padding': '0px 10px'}">
 			<md-select class="full-width" #statusFilter placeholder="Status">
-				<md-option *ngFor="let status of ['Active', 'Inactive', 'Cancelled', 'Suspended', 'Expred', 'Pending']" value="{{status}}"> {{ status }} </md-option>
+				<md-option *ngFor="let status of ['Awaiting Products', 'Complete', 'Pending']" value="{{status}}"> {{ status }} </md-option>
 			</md-select>
 		</div>
 
-		<div fxFlex="33" [ngStyle]="{'padding': '0px 10px'}">
+		<div fxFlex="25" [ngStyle]="{'padding': '0px 10px'}">
 			<md-form-field class="full-width">
-				<input mdInput [mdDatepicker]="picker" #dateAddedFilter placeholder="Date Added">
-				<md-datepicker-toggle mdSuffix [for]="picker"></md-datepicker-toggle>
-				<md-datepicker #picker></md-datepicker>
+				<input mdInput [mdDatepicker]="dateModifiedPicker" #dateModifiedFilter placeholder="Date Modified">
+				<md-datepicker-toggle mdSuffix [for]="dateModifiedPicker"></md-datepicker-toggle>
+				<md-datepicker #dateModifiedPicker></md-datepicker>
 			</md-form-field>
 		</div>
 
@@ -58,16 +72,16 @@
 </div>
 
 <div class="action-buttons" [ngStyle]="{'margin-top': '30px'}">
-	<a [routerLink]="['/admin/recurring-orders/create']"><button class="action-button" md-button [ngStyle]="{'background': '#1e91cf'}"><md-icon>add</md-icon></button></a>
+	<a [routerLink]="['/admin/returns/create']"><button class="action-button" md-button [ngStyle]="{'background': '#1e91cf'}"><md-icon>add</md-icon></button></a>
 	<button class="action-button" md-button [ngStyle]="{'background': '#f56b6b'}"><md-icon>delete</md-icon></button>
 </div>
 
 <md-table #table [dataSource]="dataSource" mdSort [ngStyle]="{'margin-top': '10px'}">
 
-	<!-- Recurring ID Column -->
-	<ng-container cdkColumnDef="recurring_id">
-		<md-header-cell *cdkHeaderCellDef md-sort-header> Recurring ID </md-header-cell>
-		<md-cell *cdkCellDef="let row"> {{row.recurring_id}} </md-cell>
+	<!-- Return ID Column -->
+	<ng-container cdkColumnDef="return_id">
+		<md-header-cell *cdkHeaderCellDef md-sort-header> Return ID </md-header-cell>
+		<md-cell *cdkCellDef="let row"> {{row.return_id}} </md-cell>
 	</ng-container>
 
 	<!-- Order ID Column -->
@@ -76,16 +90,22 @@
 		<md-cell *cdkCellDef="let row"> {{row.order_id}} </md-cell>
 	</ng-container>
 
-	<!-- Payment Reference Column -->
-	<ng-container cdkColumnDef="payment_reference">
-		<md-header-cell *cdkHeaderCellDef md-sort-header> Payment Reference </md-header-cell>
-		<md-cell *cdkCellDef="let row"> {{row.payment_reference}} </md-cell>
-	</ng-container>
-
 	<!-- Customer Column -->
 	<ng-container cdkColumnDef="customer">
-		<md-header-cell *cdkHeaderCellDef md-sort-header> customer </md-header-cell>
+		<md-header-cell *cdkHeaderCellDef md-sort-header> Customer </md-header-cell>
 		<md-cell *cdkCellDef="let row"> {{row.customer}} </md-cell>
+	</ng-container>
+
+	<!-- Product Column -->
+	<ng-container cdkColumnDef="product">
+		<md-header-cell *cdkHeaderCellDef md-sort-header> Product </md-header-cell>
+		<md-cell *cdkCellDef="let row"> {{row.product}} </md-cell>
+	</ng-container>
+
+	<!-- Model Column -->
+	<ng-container cdkColumnDef="model">
+		<md-header-cell *cdkHeaderCellDef md-sort-header> Model </md-header-cell>
+		<md-cell *cdkCellDef="let row"> {{row.model}} </md-cell>
 	</ng-container>
 
 	<!-- Status Column -->
@@ -98,6 +118,12 @@
 	<ng-container cdkColumnDef="date_added">
 		<md-header-cell *cdkHeaderCellDef md-sort-header> Date Added </md-header-cell>
 		<md-cell *cdkCellDef="let row"> {{row.date_added}} </md-cell>
+	</ng-container>
+
+	<!-- Date Modified Column -->
+	<ng-container cdkColumnDef="date_modified">
+		<md-header-cell *cdkHeaderCellDef md-sort-header> Date Modified </md-header-cell>
+		<md-cell *cdkCellDef="let row"> {{row.date_modified}} </md-cell>
 	</ng-container>
 
 	<!-- Action Column -->
